# ctl

./: .gitignore  ADAPTER_PARITY_E2E.md  AGENTS.md  ARCHITECTURE_GUARDRAILS.md  CLAUDE.md  Cargo.toml  DESIGN.md  EPISTEMIC_CONTROL.md  GLOB_WORKFLOW.md  README.md  RELEASE_NOTES.md  REPORT.md  ROADMAP.md  WATCHDOG.md
.agent/protocols/: control-guard.md  workflow-skills.md
.agent/skills/ctl-architecture-review/: source.md
.agent/skills/ctl-decision-map/: source.md
.agent/skills/ctl-grill-with-spec/: source.md
.agent/skills/ctl-handoff/: source.md
.agent/skills/ctl-tdd-loop/: source.md
.agent/skills/ctl-to-prd/: source.md
.agent/skills/ctl-to-tasks/: source.md
.claude/: settings.json  subagent-dispatch.md
.claude/agents/: ctl-oracle.md
.claude/hooks/: ctl-context.py  ctl-gate.py  ctl-wrapup.py  test_ctl_context.py  test_ctl_gate.py  test_ctl_wrapup.py
.claude/skills/control-guard/: SKILL.md
.claude/skills/ctl-architecture-review/: SKILL.md
.claude/skills/ctl-decision-map/: SKILL.md
.claude/skills/ctl-grill-with-spec/: SKILL.md
.claude/skills/ctl-handoff/: SKILL.md
.claude/skills/ctl-spec/: SKILL.md
.claude/skills/ctl-spec-bootstrap/: SKILL.md
.claude/skills/ctl-spec-update/: SKILL.md
.claude/skills/ctl-tdd-loop/: SKILL.md
.claude/skills/ctl-to-prd/: SKILL.md
.claude/skills/ctl-to-tasks/: SKILL.md
.ctl/: workflow.md
.ctl/spec/alignment/: 2026-07-04-binary-distribution-shrink.md  2026-07-04-wrapup-memory-capture.md  2026-07-11-close-cognitive-loop.md
.ctl/spec/guides/: index.md  (+6 more)
.github/workflows/: ci.yml  release.yml
.omp/: README.md  RULES.md  settings.json
.omp/agents/: architecture-reviewer.md
.omp/commands/: guardrails.md
.omp/skills/: NOTICE.md
.omp/tests/: guardrails.test.ts
.opencode/: README.md
.opencode/agent/: designer.md  oracle.md
.opencode/plugins/: ctl-gate.test.ts  ctl-gate.ts
.pi/agents/: trellis-check.md  trellis-implement.md  trellis-research.md
.trellis/: .template-hashes.json
backup-2026-05-30/omp-global-config/: agent.7z
brainstorms/: orchestration-trust-audit-v1.md
brainstorms/research-spike-v1/: convergence.md  critic.md  divergence.md
brainstorms/run-ledger-single-writer-v1/: convergence.md  critic.md  divergence.md
brainstorms/u1-doc-fix/: divergence.md
brainstorms/uncertainty-ledger-v1/: convergence.md  critic.md  divergence.md
brainstorms/uncertainty-oracle-v1/: convergence.md  critic.md  divergence.md
docs/adr/: 0001-defer-crypto-authentication-and-signed-envelopes.md  0002-allow-narrow-network-egress-for-ctl-update.md
fixtures/: invalid.json  m5_drift_golden.json  reducer_boundary_violation.jsonl  reducer_hold.jsonl  reducer_lifecycle.jsonl  reducer_m2_lifecycle.jsonl  reducer_m3_lifecycle.jsonl  reducer_m4_lifecycle.jsonl  reducer_revise.jsonl  reducer_test.jsonl  run_lifecycle.jsonl  schema_counter_examples.json
npm/: package.json
npm-omp/: README.md  package.json
schemas/: control.event-envelope.v1.schema.json  control.policy-decision.v1.schema.json  control.run-state.v1.schema.json  control.schedule-plan.v1.schema.json  control.task-definition.v1.schema.json  control.task-view.v1.schema.json
scripts/: adapter_parity_e2e.sh  install.ps1  install.sh  npm-bootstrap-publish.ps1
src/: main.rs
src/adapters/: mod.rs
src/application/: adapter_doctor_tests.rs  mod.rs  prd.rs  schedule.rs  spec.rs  tests.rs
src/cli/: mod.rs  tests.rs
src/domain/: approval.rs  audit_matrix.rs  drift.rs  event.rs  lease.rs  mod.rs  policy.rs  run.rs  task.rs  telemetry.rs
src/infrastructure/: mod.rs  omp_plugin.rs  project_update.rs  schema_validator.rs  self_update.rs  skill_sync.rs  skills.rs
tests/: audit_matrix.rs
(+167 files in other folders)
