[package]
name = "ctl"
version = "0.0.3"
edition = "2021"

[[bin]]
name = "ctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"

# Unix-only: reliable process-group signalling (kill(-pgid, sig)) when
# terminating a timed-out gate's process tree. The external `kill` binary's
# parsing of a bare negative pid is not portable; the syscall is unambiguous.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
