[package]
name = "ctl"
version = "0.0.5"
edition = "2021"

[[bin]]
name = "ctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"

# Network egress for the `ctl update` self-updater ONLY (ADR 0002 carve-out of
# DEP-002). Synchronous client — no async runtime. The `native-tls` backend uses
# the OS TLS stack (schannel / Security.framework / OpenSSL), avoiding rustls'
# `ring` C/asm toolchain; `default-features = false` also drops the gzip/flate2
# transitive (release tarballs are extracted via the system `tar`). reqwest,
# tokio, and hyper remain forbidden by the `check_dependencies` guard.
ureq = { version = "3", default-features = false, features = ["native-tls"] }

# Unix-only: reliable process-group signalling (kill(-pgid, sig)) when
# terminating a timed-out gate's process tree. The external `kill` binary's
# parsing of a bare negative pid is not portable; the syscall is unambiguous.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
