[package]
name = "ctl"
version = "0.0.9"
edition = "2021"

[[bin]]
name = "ctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"

# Network egress for the `ctl update` self-updater ONLY (ADR 0002 carve-out of
# DEP-002). Synchronous client — no async runtime. The `native-tls` backend uses
# the OS TLS stack (schannel / Security.framework / OpenSSL), avoiding rustls'
# `ring` C/asm toolchain; `default-features = false` also drops the gzip/flate2
# transitive (release tarballs are extracted via the system `tar`). reqwest,
# tokio, and hyper remain forbidden by the `check_dependencies` guard.
ureq = { version = "3", default-features = false, features = ["native-tls"] }

# Unix-only: reliable process-group signalling (kill(-pgid, sig)) when
# terminating a timed-out gate's process tree. The external `kill` binary's
# parsing of a bare negative pid is not portable; the syscall is unambiguous.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-only: build a vendored OpenSSL from source for native-tls instead of
# probing for a system install. The release `aarch64-unknown-linux-gnu` build is
# cross-compiled and has no ARM64 OpenSSL on the runner, so `openssl-sys` aborts
# ("Could not find directory of OpenSSL installation"). `ureq`'s `vendored`
# feature forwards to `native-tls/vendored`, which compiles OpenSSL with the
# cross C toolchain — fixing the cross build and making every Linux artifact
# statically self-contained (no end-user libssl runtime dependency). This only
# adds a feature to the existing `ureq` dep; no new direct dependency, and macOS
# (Security.framework) / Windows (schannel) are unaffected.
[target.'cfg(target_os = "linux")'.dependencies]
ureq = { version = "3", default-features = false, features = ["native-tls", "vendored"] }
